OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Queryable automation and integration error log with categorization for reporting.</description>
    <label>Chuzo Error Log</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chuzo Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>