OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Source Apex class or Flow API name.</description>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>