OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Flow element API name or logical endpoint identifier.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>