OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Full technical diagnostic text (fault, stack, correlation).</description>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>