OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Chuzo Error Logs</relationshipLabel>
    <relationshipName>Chuzo_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>