OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Chuzo Error Logs</relationshipLabel>
    <relationshipName>Chuzo_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>