OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Product or program tag for global Error Log reports.</description>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>