OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Provider_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Provider_Subtype__c</fullName>
    <description>Secondary axis for filtering (feature area within onboarding).</description>
    <label>Provider Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Beam</fullName>
                <isActive>false</isActive>
                <label>Beam</label>
            </value>
            <value>
                <fullName>BRE</fullName>
            </value>
            <value>
                <fullName>Communication Dispatch</fullName>
            </value>
            <value>
                <fullName>Experience Create Record</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Onboarding Automation</fullName>
                <default>true</default>
                <label>Onboarding Automation</label>
            </value>
            <value>
                <fullName>Onboarding Requirements</fullName>
            </value>
            <value>
                <fullName>Record Collection Editor</fullName>
            </value>
            <value>
                <fullName>Requirement Subjects</fullName>
            </value>
            <value>
                <fullName>Stream</fullName>
                <isActive>false</isActive>
                <label>Stream</label>
            </value>
            <value>
                <fullName>Training Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>