OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>User-safe summary plus correlation tokens for support.</description>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>