OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <description>Optional context (e.g. Sync, Async, or screen flow API name).</description>
    <label>Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>