OnboardingV2Minimal/force-app/main/default/objects/Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Primary error category for list views and reports.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
                <isActive>false</isActive>
                <label>API Error</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Lead Error</fullName>
                <isActive>false</isActive>
                <label>Lead Error</label>
            </value>
            <value>
                <fullName>Screen Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>